Remove dependency to `:node-embedding-algorithms`